push from root repository